# deborg

./: .gitignore  LICENSE  Makefile  README.md  README.rst  requirements.txt  requs.2022-02-14.txt  setup.cfg  setup.py  stdeb.cfg  test.rst  tox.ini
debian/: Makefile  build_deb.sh  changelog  control  copyright  gbp.conf  python3-deborg.manpages  rules
debian/source/: options
doc/: deborg.rst
doc/man/: deborg.rst
src/deborg/: __init__.py  __main__.py  cli.py  orgparser.py  parser.py
tests/: test_deborg.py  test_parser.py
tests/input/: DebPackages.org  example.org  testfile_ex1.org
