[metadata]
name = deborg
version = 1.0.0
author = Tobias Marczewski (mtoboid)
author_email = vortex@e.mail.de
description = Extract deb package information from an emacs org file.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = deb, package, emacs, org
url = https://github.com/mtoboid/deborg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Environment :: Console
    Topic :: Text Editors :: Emacs

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.extras_require]
Tests = pytest>=6.2

[options.packages.find]
where = src