[metadata]
name = deborg
version = attr: deborg.__main__.__version__
description = Extract deb package information from an emacs org file.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 :: Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Installation/Setup
    Topic :: System :: System Administration
    Topic :: Text Editors :: Emacs
author = Tobias Marczewski (mtoboid)
author_email = vortex@e.mail.de
maintainer = Tobias Marczewski
maintainer_email = vortex@e.mail.de
url = https://github.com/mtoboid/deborg
keywords = deb, package, emacs, org
platforms = linux
license = GPL-3+

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.extras_require]
Tests =
    pytest >= 6.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    deborg = deborg.__main__:main
